Replaced hard-coded username with .chezmoi.username

--- a/home/private_dot_config/swaylock/config.tmpl
+++ b/home/private_dot_config/swaylock/config.tmpl
@@ -1,5 +1,5 @@
 daemonize
-image=/home/jllacuna/.local/share/backgrounds/alexandra_daddario-1280x720.png
+image=/home/{{ .chezmoi.username }}/.local/share/backgrounds/alexandra_daddario-1280x720.png
 bs-hl-color=aa092c
 caps-lock-bs-hl-color=aa092c
 caps-lock-key-hl-color=0a5c21
