--- a/home/.chezmoiscripts/run_20-install_update_nerd_font.tmpl
+++ b/home/.chezmoiscripts/run_20-install_update_nerd_font.tmpl
@@ -4,19 +4,34 @@ FONT={{ .nerdFont | quote }}
 REPO="https://github.com/ryanoasis/nerd-fonts"
 DEST=~/.local/share/fonts
 
-# Clean up existing font
-rm -fr $DEST/$FONT
-
 # Get latest release version
 LOCATION=$(curl -si $REPO/releases/latest | grep -i 'location:*')
 REGEX='releases/tag/(v[0-9\.]+)'
 
 [[ $LOCATION =~ $REGEX ]]
-
 TAG=${BASH_REMATCH[1]}
 
-echo "Installing Nerd Font: $FONT $TAG"
+# Get currently installed version, if any
+VERSION_FILE="$DEST/$FONT/VERSION"
+[ -e $VERSION_FILE ] && CURRENT_TAG=$(< $VERSION_FILE) || CURRENT_TAG=""
 
+if [ "$TAG" = "$CURRENT_TAG" ]; then
+  echo "Nerd font already installed: $FONT $TAG"
+  exit 0
+fi
+
+# Install the latest version of the font
+echo "Installing nerd font: $FONT $TAG"
+
+# Clean up existing font
+rm -fr $DEST/$FONT
+
+# Download and extract the font
 curl --create-dirs --progress-bar -Lo $DEST/$FONT.tar.xz $REPO/releases/download/$TAG/$FONT.tar.xz
 cd $DEST && mkdir $FONT && tar -xvJf $FONT.tar.xz -C $FONT && rm $FONT.tar.xz
+
+# Update font cache
 fc-cache -fv
+
+# Save a version file
+echo $TAG > $VERSION_FILE
