--- a/home/private_dot_zshrc.tmpl
+++ b/home/private_dot_zshrc.tmpl
@@ -1,16 +1,19 @@
-# Lines configured by zsh-newuser-install
 HISTFILE=~/.histfile
 HISTSIZE=1000
 SAVEHIST=1000
+
 setopt autocd extendedglob
+
 bindkey -v
-# End of lines configured by zsh-newuser-install
-# The following lines were added by compinstall
-zstyle :compinstall filename '/home/jllacuna/.zshrc'
+
+if (( ! $fpath[(I)/home/{{ .chezmoi.username }}/.zsh/completion] )); then
+  fpath+=(/home/{{ .chezmoi.username }}/.zsh/completion)
+fi
+
+zstyle :compinstall filename '/home/{{ .chezmoi.username }}/.zshrc'
 
 autoload -Uz compinit
 compinit
-# End of lines added by compinstall
 
 # Map zsh HOST to bash HOSTNAME
 # https://unix.stackexchange.com/a/209394
@@ -18,8 +21,9 @@ HOSTNAME=$HOST
 
 export EDITOR=vi
 
-# ~/.local/bin for Oh My Posh
-export PATH=$PATH:~/.local/bin
+if [[ ! "$PATH" == */home/{{ .chezmoi.username }}/.local/bin* ]]; then
+  PATH="${PATH:+${PATH}:}/home/{{ .chezmoi.username }}/.local/bin"
+fi
 
 # Display fzf top-down
 export FZF_DEFAULT_OPTS="--layout=reverse"
