--- a/home/private_dot_config/sway/config.tmpl
+++ b/home/private_dot_config/sway/config.tmpl
@@ -26,7 +26,7 @@ include /etc/sway/config-vars.d/*
 #
 # Default wallpaper (more resolutions are available in /usr/share/backgrounds/sway/)
 # output * bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill
-output * bg /home/{{ .chezmoi.username }}/.local/share/backgrounds/red_mountain-1280x720.jpg fill
+output * bg {{ .chezmoi.homeDir }}/.local/share/backgrounds/red_mountain-1280x720.jpg fill
 
 # Rotate uConsole display
 output DSI-1 transform 90
