Added clr alias for clear

--- a/home/private_dot_zshrc.tmpl
+++ b/home/private_dot_zshrc.tmpl
@@ -48,6 +48,7 @@ zstyle ':completion:*' list-colors ${(s.:.)LS_COLORS}
 autoload -Uz compinit
 compinit
 
+alias clr='clear'
 # Show colors by default with ls
 alias ls='eza --icons always'
 # Show all files in long format
