Added alias for nvim

--- a/home/private_dot_zshrc.tmpl
+++ b/home/private_dot_zshrc.tmpl
@@ -78,6 +78,9 @@ alias d='wd rm'
 alias l='wd list'
 alias p='wd path'
 
+# alias nvim
+alias e='nvim'
+
 # Set up fzf key bindings and fuzzy completion
 fzf_rc="${XDG_CONFIG_HOME:-$HOME/.config}"/fzf/fzf.zsh
 [ -f $fzf_rc ] && source $fzf_rc
