Added python3-pip and python build dependencies to package installs. Added install script for pyenv

--- a/home/private_dot_zlogin.tmpl
+++ b/home/private_dot_zlogin.tmpl
@@ -5,5 +5,9 @@
 /usr/bin/keychain --clear --timeout 60
 source $HOME/.keychain/$HOSTNAME-sh
 
+# pyenv
+export PYENV_ROOT="{{ .chezmoi.homeDir }}/.local/share/pyenv"
+eval "$(pyenv init -)"
+
 # Start sway on login
 [ "$(tty)" = "/dev/tty1" ] && exec sway
