--- a/home/private_dot_zshrc.tmpl
+++ b/home/private_dot_zshrc.tmpl
@@ -27,6 +27,11 @@ fi
 # Colors for ls, tree, fd, etc.
 export LS_COLORS="$(vivid generate jellybeans)"
 
+# alias-tips.plugin.zsh
+export ZSH_PLUGINS_ALIAS_TIPS_TEXT="Try alias: "
+# Won't see alias tip for clr => clear since it'll be cleared immediately
+export ZSH_PLUGINS_ALIAS_TIPS_EXCLUDES="clr"
+
 # Use fd to traverse the file system
 export FZF_DEFAULT_COMMAND='fd --type file --type dir --type symlink --color always --hidden --follow --exclude .git'
 # Display fzf top-down with colors
