Added install for delta. Updated git config to use delta. Changed fpath to prepend ~/.zsh/completion instead of append

--- a/home/private_dot_zshrc.tmpl
+++ b/home/private_dot_zshrc.tmpl
@@ -7,7 +7,7 @@ setopt autocd extendedglob
 bindkey -v
 
 if (( ! $fpath[(I){{ .chezmoi.homeDir }}/.zsh/completion] )); then
-  fpath+=({{ .chezmoi.homeDir }}/.zsh/completion)
+  fpath=({{ .chezmoi.homeDir }}/.zsh/completion $fpath)
 fi
 
 # Map zsh HOST to bash HOSTNAME
