--- a/home/private_dot_config/wezterm/wezterm.lua.tmpl
+++ b/home/private_dot_config/wezterm/wezterm.lua.tmpl
@@ -1,16 +1,33 @@
-local wezterm = require 'wezterm'
+local wezterm = require "wezterm"
 
 local act = wezterm.action
 local config = wezterm.config_builder()
 
 config.enable_tab_bar = false -- Use tmux for tabs
 
-config.font = wezterm.font 'Hack'
+config.font = wezterm.font "Hack"
 config.font_size = 16.0
 
-config.color_scheme = 'Jellybeans'
+config.color_scheme = "Jellybeans"
 
-config.window_background_opacity = 0.95
+config.background = {
+  {
+    source = { File = "{{ .chezmoi.homeDir }}/.local/share/backgrounds/black.png" },
+    opacity = 0.88,
+  },
+  {
+    source = { File = "{{ .chezmoi.homeDir }}/.local/share/backgrounds/gemma.png" },
+    opacity = 0.07,
+    vertical_align = "Bottom",
+    horizontal_align = "Right",
+    vertical_offset = -10,
+    horizontal_offset = 80,
+    width = 2025 / 5, -- original is 2025
+    height = 2370 / 5, -- original is 2370
+    repeat_x = "NoRepeat",
+    repeat_y = "NoRepeat",
+  },
+}
 
 -- Copy/paste with right mouse button
 config.mouse_bindings = {
