Updated packages with dependencies for building tmux. Added install script for tmux. Added custom configs for tmux. Changed waybar style to use a linear gradient background. Added xit alias for exit

--- a/home/private_dot_zshrc.tmpl
+++ b/home/private_dot_zshrc.tmpl
@@ -73,6 +73,7 @@ autoload -Uz compinit
 compinit
 
 alias clr='clear'
+alias xit='exit'
 # Show colors by default with ls
 alias ls='eza --icons always --color=always'
 # Show all files in long format
