--- a/home/private_dot_config/waybar/style.css
+++ b/home/private_dot_config/waybar/style.css
@@ -1,6 +1,6 @@
 window#waybar {
   color: white;
-  background: rgba(97, 5, 25, 0.25);
+  background: linear-gradient(180deg, rgba(97, 5, 25, 0.25), rgba(97, 5, 25, 0));
 }
 
 tooltip {
