Added script to install lazydocker and lazygit with go Added ~/go/bin to $PATH

--- a/home/private_dot_zshrc.tmpl
+++ b/home/private_dot_zshrc.tmpl
@@ -31,6 +31,10 @@ if [[ ! "$PATH" == *{{ .chezmoi.homeDir }}/.local/share/go/bin* ]]; then
   PATH="${PATH:+${PATH}:}{{ .chezmoi.homeDir }}/.local/share/go/bin"
 fi
 
+if [[ ! "$PATH" == *{{ .chezmoi.homeDir }}/go/bin* ]]; then
+  PATH="${PATH:+${PATH}:}{{ .chezmoi.homeDir }}/go/bin"
+fi
+
 # rust
 source {{ .chezmoi.homeDir }}/.cargo/env
 
