Updated and renamed script to install lazydocker and lazygit to also install age via go install Set up encryption with age: - Updated .chezmoi.yml template with age identity and recipient - Added passphrase encrypted age key key.txt.age - Added key.txt.age to .chezmoiignore - Added script to decrypt age key Added encrypted SSH key and corresponding public key file Added encrypted ssh server configs Removed SSH key setup from README Renumbered install scripts

--- a/home/.chezmoi.yml.tmpl
+++ b/home/.chezmoi.yml.tmpl
@@ -2,6 +2,10 @@
 {{ $bitbucketEmail := promptString "Bitbucket email" -}}
 {{ $bitbucketSubdomain := promptString "Bitbucket subdomain" -}}
 {{ $githubEmail := promptString "Github private email" -}}
+encryption: age
+age:
+  identity: ~/.config/chezmoi/key.txt
+  recipient: age1q32r2jvahhvhhdn6f9t7acwmna2ed6t53gnnac0r5wcn60jd0urqkgcd07
 data:
   fullName: {{ $fullName }}
   nerdFont: Hack
