Updated README. Fixed script to install go packages to reference go using full path. Added xit to ZSH_PLUGINS_ALIAS_TIPS_EXCLUDES

--- a/home/private_dot_zshrc.tmpl
+++ b/home/private_dot_zshrc.tmpl
@@ -47,7 +47,7 @@ export LS_COLORS="$(vivid generate jellybeans)"
 # alias-tips.plugin.zsh
 export ZSH_PLUGINS_ALIAS_TIPS_TEXT="Try alias: "
 # Won't see alias tip for clr => clear since it'll be cleared immediately
-export ZSH_PLUGINS_ALIAS_TIPS_EXCLUDES="clr"
+export ZSH_PLUGINS_ALIAS_TIPS_EXCLUDES="clr xit"
 
 # Use fd to traverse the file system
 export FZF_DEFAULT_COMMAND='fd --type file --type dir --type symlink --color always --hidden --follow --exclude .git'
