--- a/home/private_dot_config/sway/config.tmpl
+++ b/home/private_dot_config/sway/config.tmpl
@@ -106,10 +106,18 @@ exec swayidle -w \
     bindsym $mod+Shift+c reload
 
     # Show lock screen
-    bindsym $mod+Escape exec swaylock
+    bindsym Pause exec swaylock
 
     # Show logout screen
     bindsym $mod+Shift+e exec wlogout --protocol layer-shell --buttons-per-row 2
+
+    # Fn buttons
+    bindsym XF86MonBrightnessUp exec brightnessctl s 1+
+    bindsym XF86MonBrightnessDown exec brightnessctl s 1-
+
+    bindsym XF86AudioRaiseVolume exec swaynag -m "TODO: Audio Up"
+    bindsym XF86AudioLowerVolume exec swaynag -m "TODO: Audio Down"
+    bindsym XF86AudioMute exec swaynag -m "TODO: Audio Mute"
 #
 # Moving around:
 #
