--- a/home/private_dot_config/waybar/style.css
+++ b/home/private_dot_config/waybar/style.css
@@ -8,7 +8,7 @@ tooltip {
   border-radius: 15px;
 }
 
-#network, #battery {
+#network, #battery, #custom-volume {
   font-size: 1.2rem;
   padding: 0 15px 0 10px;
   border-radius: 15px;
@@ -62,6 +62,10 @@ tooltip {
   font-size: 1.8rem;
   padding: 0 15px 0 10px;
   margin: 5px 5px 5px 0;
+}
+
+#custom-volume {
+  background: linear-gradient(180deg, rgba(161, 18, 120, 1.0), rgba(161, 18, 120, 1.0) 30%, rgba(161, 18, 120, 0.7));
 }
 
 #mode {
