Added script to install nushell Added external files for: - bat syntax highlighting of nu scripts - bookmark plugin script Updated bat reload cache script: - To reload cache if syntax files change - To hack fix the nushell sublime syntax file Added script to seed nushell bookmarks Added initial nushell config files Updated neovim config: - Added nushell/tree-sitter-nu plugin - Added nu to treesitter config Updated Oh My Posh theme to display the name of the shell if it isn't zsh

--- a/home/.chezmoiscripts/run_onchange_after_90-reload_bat_cache.tmpl
+++ b/home/.chezmoiscripts/run_onchange_after_90-reload_bat_cache.tmpl
@@ -1,10 +1,18 @@
 #!/usr/bin/env bash
 
-# Only run if the themes change
+# Only run if the themes or syntaxes change
 {{ $themes := glob (joinPath .chezmoi.homeDir ".config" "bat" "themes" "*.tmTheme") }}
 {{- range $themes }}
   {{- "#" }} {{ include . | sha256sum }} {{ . }}
 {{ end }}
+{{ $syntaxes := glob (joinPath .chezmoi.homeDir ".config" "bat" "syntaxes" "*.sublime-syntax") }}
+{{- range $syntaxes }}
+  {{- "#" }} {{ include . | sha256sum }} {{ . }}
+{{ end }}
+
+# Hack: Fix regex error in nushell syntax file
+# see: https://github.com/kurokirasama/nushell_sublime_syntax/issues/4
+sed -i -e 's/| *? *|/| \\? |/g' ~/.config/bat/syntaxes/nushell.sublime-syntax
 
 echo "Updating bat themes and syntax definitions"
 bat cache --build
