--- a/home/private_dot_zshrc.tmpl
+++ b/home/private_dot_zshrc.tmpl
@@ -112,8 +112,7 @@ alias p='wd path'
 alias e='nvim'
 
 # Set up fzf key bindings and fuzzy completion
-fzf_rc="${XDG_CONFIG_HOME:-$HOME/.config}"/fzf/fzf.zsh
-[ -f $fzf_rc ] && source $fzf_rc
+source <(fzf --zsh)
 
 # zoxide completions
 eval "$(zoxide init --cmd cd zsh)"
