Revert "Updated code to load fzf in .zshrc"
This reverts commit 7629e7f82d1f1ebf7d5304121aa92178801361fb.

--- a/home/private_dot_zshrc.tmpl
+++ b/home/private_dot_zshrc.tmpl
@@ -112,7 +112,8 @@ alias p='wd path'
 alias e='nvim'
 
 # Set up fzf key bindings and fuzzy completion
-source <(fzf --zsh)
+fzf_rc="${XDG_CONFIG_HOME:-$HOME/.config}"/fzf/fzf.zsh
+[ -f $fzf_rc ] && source $fzf_rc
 
 # zoxide completions
 eval "$(zoxide init --cmd cd zsh)"
