Added function to change the cursor based on vim mode

--- a/home/private_dot_zshrc.tmpl
+++ b/home/private_dot_zshrc.tmpl
@@ -7,7 +7,17 @@ setopt extended_history share_history
 setopt hist_ignore_all_dups hist_save_no_dups
 setopt interactive_comments
 
+# vim mode
 bindkey -v
+
+# Change cursor shape for different vi modes.
+function zle-keymap-select () {
+  case $KEYMAP in
+    vicmd) echo -ne '\e[1 q';;      # block
+    viins|main) echo -ne '\e[5 q';; # beam
+  esac
+}
+zle -N zle-keymap-select
 
 if (( ! $fpath[(I)/usr/share/zsh/site-functions] )); then
   fpath=(/usr/share/zsh/site-functions $fpath)
