Fixed nvim-tree to display dotfiles including .gitignore, but not .git folder. Removed node_modules from nvim-tree custom file filter: should be in .gitignore. Added sway config for secondary monitor

--- a/home/private_dot_config/sway/config.tmpl
+++ b/home/private_dot_config/sway/config.tmpl
@@ -30,6 +30,7 @@ output * bg {{ .chezmoi.homeDir }}/.local/share/backgrounds/red_mountain-1280x72
 
 # Rotate uConsole display
 output DSI-1 transform 90
+output HDMI-A-1 transform 270
 
 # Remove title bar
 # https://github.com/swaywm/sway/issues/6946#issuecomment-1182012140
